# cbio-kb

./: .dockerignore  .gitignore  .nojekyll  AGENTS.md  Dockerfile  Dockerfile.chat  README.md  ROBIN_PAPERS.md  ROBIN_PMIDS.txt  ROBIN_PMID_TO_PMCID.csv  TOKENS.md  ask-chat.css  ask-chat.js  ask-graph.css  ask-graph.js  ask.html  cloudbuild-chat.yaml  graph.json  index.html  listings.json  pyproject.toml  robots.txt  search.json  site-styles.css  sitemap.xml
.obsidian/: graph.json
ai_search/: agent.py  anchors.py  app.py  hybrid.py  memory.py  rag.py  sessions.py  tools.py
cancer_types/: ACBC.html  ACC.html  ACCC.html  ACML.html  ACPP.html  ACRM.html  ACYC.html  AITL.html  ALAL.html  ALCL.html  ALCLALKN.html  ALCLALKP.html  AMBL.html  AMKL.html  AML.html  AMPCA.html  ANGS.html  ANSC.html  APAD.html  APLPMLRARA.html  ARMS.html  ASPS.html  AST.html  ASTB.html  ASTR.html  ATLL.html  ATRT.html  BCC.html  BILIARY_TRACT.html  BL.html  BLCA.html  BLL.html  BLLKMT2A.html  BLLNOS.html  BLSC.html  BONE.html  BRAIN.html  BRCA.html  BREAST.html  CCOC.html  (+235 more)
datasets/: acbc_mskcc_2015.html  acc_2019.html  acc_tcga_pan_can_atlas_2018.html  acyc_jhu_2016.html  acyc_mda_2015.html  acyc_mgh_2016.html  acyc_mskcc_2013.html  acyc_sanger_2013.html  all_stjude_2013.html  all_stjude_2015.html  all_stjude_2016.html  aml_ohsu_2018.html  aml_ohsu_2022.html  ampca_bcm_2016.html  angs_project_painter_2018.html  appendiceal_msk_2022.html  asclc_msk_2024.html  bcc_unige_2016.html  bladder_columbia_msk_2018.html  bladder_msk_2023.html  blca_bcan_hcrn_2022.html  blca_bgi.html  blca_cornell_2016.html  blca_dfarber_mskcc_2014.html  blca_msk_2025.html  blca_msk_tcga_2020.html  blca_mskcc_solit_2012.html  blca_mskcc_solit_2014.html  blca_nmibc_2017.html  blca_plasmacytoid_mskcc_2016.html  blca_tcga_pan_can_atlas_2018.html  blca_tcga_pub.html  (+341 more)
eval/: run.py  (+8 more)
(+6740 files in other folders)
