[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cbio-kb"
version = "0.1.0"
description = "Agent-maintained knowledge base over cBioPortal publications"
requires-python = ">=3.10"
dependencies = [
  "pdfplumber",
  "requests",
]

[project.optional-dependencies]
server = [
  "faiss-cpu",
  "numpy",
  "fastmcp",
  "spacy",
  "tqdm",
  "google-genai>=1.0",
]
ocr = [
  "pdf2image",
  "pytesseract",
  "pillow",
]
chat = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-ai[anthropic]",
  "jinja2",
  "python-multipart",
  "sse-starlette",
  "python-dotenv",
]
cloud = [
  "google-cloud-firestore>=2.19",
]

[project.scripts]
cbio-kb = "cbio_kb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cbio_kb"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
eval = [
    "matplotlib>=3.8",
    "plotly>=5.22",
    "pyyaml",
    "anthropic",
    "httpx",
    "python-dotenv",
]
